# MRM-Research-Ghanashyam_Codes

./: README.md
Dextra_arm_Ghanshyam's work/Moveit_files/: CMakeLists.txt
Dextra_arm_Ghanshyam's work/Moveit_files/doc/kinematics/: CMakeLists.txt
Dextra_arm_Ghanshyam's work/Moveit_files/doc/motion_planning_pipeline/: CMakeLists.txt
Dextra_arm_Ghanshyam's work/Moveit_files/doc/motion_planning_pipeline/src/: motion_planning_pipeline.cpp
Dextra_arm_Ghanshyam's work/Moveit_files/doc/move_group_interface/: CMakeLists.txt
Dextra_arm_Ghanshyam's work/Moveit_files/doc/planning_scene/: CMakeLists.txt
Robotic_arm_Ghanshyam's work/Moveit_files/: package.xml
Robotic_arm_Ghanshyam's work/Moveit_files/doc/motion_planning_api/: CMakeLists.txt
Robotic_arm_Ghanshyam's work/Moveit_files/doc/motion_planning_api/launch/: motion_planning_api.launch
Robotic_arm_Ghanshyam's work/Moveit_files/doc/planning_scene_ros_api/: CMakeLists.txt
Robotic_arm_Ghanshyam's work/Moveit_files/doc/robot_model_and_robot_state/: CMakeLists.txt
pd_ws/devel/: .catkin  .rosinstall  setup.sh
pd_ws/devel/lib/moveit_ops/: motion_planning_api  motion_planning_pipeline  move_group_interface  pick_place  planning_scene  planning_scene_ros_api  robot_model_and_robot_state  ros_api
pd_ws/devel/lib/pkgconfig/: arm_moveit_config.pc  arm_table_setup_home_g1.pc  moveit_ops.pc
pd_ws/src/arm_moveit_config/: .setup_assistant
pd_ws/src/arm_moveit_config/config/: arm_table_setup_home_g1.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
pd_ws/src/arm_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  (+2 more)
pd_ws/src/arm_table_setup_home_g1/: CMakeLists.txt  urdf.rviz
(+37 files in other folders)
